--- a/css/pages-home.css
+++ b/css/pages-home.css
@@ -17,6 +17,10 @@
   font-size: var(--fs-500);
 }
 
+.question-card__answer {
+  display: none;
+}
+
 .question-card__tags {
   display: flex;
   margin-top: 20px;
