--- a/css/pages-profile.css
+++ b/css/pages-profile.css
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+  font-family: system-ui;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  background-color: #bac4c9;
+  transition: 0.4s ease;
+}
 .profile,
 .settings {
   padding: 20px 40px;
@@ -54,4 +66,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+body.dark-mode {
+  background-color: rgb(88, 82, 82);
+  color: rgb(0, 0, 0);
 }
