--- a/css/components.css
+++ b/css/components.css
@@ -29,12 +29,16 @@ input:checked + .switch:after {
 }
 
 .switch {
+  cursor: pointer;
   position: relative;
   width: 100%;
   height: 100%;
   border: 2px solid black;
   border-radius: 13px;
   box-shadow: 1px 1px 5px -1px black;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .switch:after {
@@ -46,4 +50,6 @@ input:checked + .switch:after {
   top: 2px;
   bottom: 2px;
   background-color: var(--active-color);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
