--- a/css/pages-home.css
+++ b/css/pages-home.css
@@ -5,16 +5,30 @@
   top: -15px;
 }
 
+.question-card__icon {
+  background-image: url(./assets/bookmark.png);
+}
+.question-card__icon--active {
+  background-image: url(./assets/bookmark_filled.png);
+}
+
 .question-card__title {
   text-align: center;
 }
 
 .question-card__button {
-  border-radius: 20px;
-  padding: 5px 20px;
+  cursor: pointer;
+  width: 100%;
+  max-width: 200px;
+  padding: 14px 28px;
   border: 1px solid black;
+  border-radius: 20px;
   box-shadow: 0px 1px 5px 0px black;
   font-size: var(--fs-500);
+}
+
+.question-card__button:hover {
+  background-color: var(--white);
 }
 
 .question-card__answer {
