--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,15 @@
 
 body {
   margin: 0;
+  font-family: system-ui;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #bac4c9;
+  transition: 0.4s ease;
+  margin-bottom: 60px;
 }
 
 * {
@@ -37,6 +46,7 @@ header {
 
 main {
   padding: 95px 20px 80px 20px;
+  margin: 80px 20px;
 }
 
 section {
